# Puch_ai_clone

./: .gitignore  COMMANDS_TO_TRY.md  HOW_TO_ADD_MCP_SERVERS.md  MCP_INTEGRATION_SUMMARY.md  README.md  README_ENHANCED.md  README_NEW.md  WEATHER_UPDATE_COMPLETE.md  setup-enhanced.ps1  setup.ps1  setup_external_servers.bat  setup_external_servers.sh  test_weather_api.py
google-search-server/: google_search_mcp_server.py  google_search_server.py  pyproject.toml  requirements.txt  test_google_search.py
weather-server/: setup.ps1  setup.py  weather.py
weather-server/weather-standalone/: main.py  pyproject.toml
whatsapp-gemini-server/: .env  .env.example  README.md  README_INTELLIGENT.md  demo.py  demo_enhanced.py  demo_intelligent.py  intelligent_router.py  pyproject.toml  setup.ps1  setup_intelligent.ps1  start_webhook.py  test_intelligent_system.py  test_simple.py  test_whatsapp_enhanced.py  webhook_receiver.py  whatsapp_gemini.py  whatsapp_gemini_enhanced.py  whatsapp_gemini_intelligent.py  whatsapp_master.py  whatsapp_mcp_tools.py  whatsapp_simple.py
whatsapp-gemini-server/production/: README.md  whatsapp_mcp_bridge.py  whatsapp_mcp_bridge_v2.py  whatsapp_mcp_tools.py
whatsapp-gemini-server/tests/: test_webhook.py  test_whatsapp.py
