[project]
name = "google-search-mcp-server"
version = "0.1.0"
description = "MCP Server for Google Search with grounding - Real-time news and sentiment analysis"
dependencies = [
    "mcp>=1.2.0",
    "google-genai>=0.8.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.4.1",
    "requests>=2.32.0",
]
requires-python = ">=3.10"
